--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ dj-database-url==0.5.0
 psycopg2-binary==2.8.3
 djangorestframework==3.10.3
 
+gunicorn==19.9.0
+whitenoise==4.1.2
+
 # dev depencies
 pytest==4.0.2
 pytest-django==3.4.4
